---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021.08.17
  Bugfixes:
    - Fix crash when editor is used to delete tiles under Foundation (#84)
    - Deconstructing a blocked foundation would yield infinite concrete (#85)
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021.08.15
  Locale:
    - Newest Russian translations
  Bugfixes:
    - Fix crash on closing Smart Splitter GUI while still having a menu open
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2021.08.15
  Bugfixes:
    - Players who joined a game after the HUB was built for the first time would not get access to the HUB.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021.08.15
  Bugfixes:
    - Fix crash when changing Smart Splitter filters in multiplayer
  Changes:
    - Added /get-hub-parts command to Freeplay. Allows you to continue even if you lose or misplace the HUB Parts and no longer have a HUB.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021.08.14
  Bugfixes:
    - Fix crash on game init due to error in Build Event refactor (power slugs)
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021.08.14
  Locale:
    - Russian translations added (thanks Shadow_Man)
  Bugfixes:
    - Don't play "new objective" sound effect when completing Onboarding
    - Pipelines were not indestructible!
    - Add missing mined_sound on lookout tower
  Changes:
    - Foundation can be marked for deconstruction even with entities on top, but can't actually be mined until the obstacle is removed.
  Optimizations: