@@ -4,6 +4,7 @@ Date: 2021.08.17
   Bugfixes:
     - Fix crash when editor is used to delete tiles under Foundation (#84)
     - Deconstructing a blocked foundation would yield infinite concrete (#85)
+    - Fix crash when a game admin deletes a player who tamed a lizard doggo (#86)
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.4
 Date: 2021.08.15
